--- a/Poema2.html
+++ b/Poema2.html
@@ -7,5 +7,5 @@
   Mas, se formiga falasse
   e me visse lá do chão,
   ia dizer, com certeza:
-  — Minha nossa, que grandão!
+  <i>— Minha nossa, que grandão!</i>
 </p>
