--- a/Poema1.html
+++ b/Poema1.html
@@ -22,7 +22,7 @@ apenas mais largo
 e talvez mais comprido
 e que não tenha fim.
 
-(Quem souber de um burrinho desses,
+(Quem souber de um <b>burrinho</b> desses,
 pode escrever
 para a Ruas das Casas,
 Número das Portas,
