--- a/Poema3.html
+++ b/Poema3.html
@@ -17,5 +17,5 @@
   Eu fecho a frente da casa
   Fecho a frente do quartel
   Eu fecho tudo no mundo
-  Só vivo aberta no céu!  
+  <b>Só vivo aberta no céu!</b>  
 </p>
